--- a/Quoting/App_LocalResources/QuoteList.aspx.resx
+++ b/Quoting/App_LocalResources/QuoteList.aspx.resx
@@ -117,46 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="TEXT_APPROVAL_CHANGE_APPROVER_ID" xml:space="preserve">
-    <value>Approver ID</value>
+    <data name="CREATION_DATE" xml:space="preserve">
+        <value>Creation date</value>
+    </data>
+    <data name="CURRENCY" xml:space="preserve">
+        <value>Currency</value>
+    </data>
+    <data name="ID_QUOTE" xml:space="preserve">
+        <value>Id Quote</value>
+    </data>
+    <data name="MTTitle1Resource1.Text" xml:space="preserve">
+        <value>Quotes List</value>
+    </data>
+  <data name="PageResource1.Title" xml:space="preserve">
+    <value>MetraNet - Quotes List</value>
   </data>
-  <data name="TEXT_APPROVAL_CHANGE_COMMENT" xml:space="preserve">
-    <value>Comment</value>
-  </data>
-  <data name="TEXT_APPROVAL_CHANGE_CURRENT_STATE" xml:space="preserve">
-    <value>Current State</value>
-  </data>
-  <data name="TEXT_APPROVAL_CHANGE_ID" xml:space="preserve">
-    <value>Action</value>
-  </data>
-  <data name="TEXT_APPROVAL_CHANGE_LAST_MODIFIED_DATE" xml:space="preserve">
-    <value>Last Modified Date</value>
-  </data>
-  <data name="TEXT_APPROVAL_CHANGE_SUBMITTED_DATE" xml:space="preserve">
-    <value>Submitted Date</value>
-  </data>
-  <data name="TEXT_APPROVAL_CHANGE_SUBMITTER_DISPLAYNAME" xml:space="preserve">
-    <value>Submitter</value>
-  </data>
-  <data name="TEXT_APPROVAL_CHANGE_SUBMITTER_ID" xml:space="preserve">
-    <value>Submitter ID</value>
-  </data>
-  <data name="TEXT_APPROVAL_CHANGE_TYPE" xml:space="preserve">
-    <value>Type</value>
-  </data>
-  <data name="TEXT_APPROVAL_CHANGE_UNIQUE_ITEM_ID" xml:space="preserve">
-    <value>Unique Item ID</value>
-  </data>
-  <data name="TEXT_APPROVAL_NO_RECORD_TEXT" xml:space="preserve">
-    <value>No Records Found</value>
-  </data>
-  <data name="TEXT_APPROVAL_VIEW_CHANGES_SUMMARY" xml:space="preserve">
-    <value>View Changes</value>
-  </data>
-  <data name="TEXT_APPROVAL_CHANGE_STATE_DISPLAYNAME" xml:space="preserve">
-    <value>State</value>
-  </data>
-  <data name="TEXT_APPROVAL_CHANGE_UNIQUE_ITEM_DISPLAYNAME" xml:space="preserve">
-    <value>Modified Item</value>
+    <data name="QUOTE_ACCOUNTS" xml:space="preserve">
+        <value>Accounts</value>
+    </data>
+    <data name="QUOTE_DESCRIPTION" xml:space="preserve">
+        <value>Quote description</value>
+    </data>
+    <data name="QUOTE_STATUS" xml:space="preserve">
+        <value>Quote status</value>
+    </data>
+    <data name="REPORT_LINK" xml:space="preserve">
+        <value>Report link</value>
+    </data>
+    <data name="STATUS_CLEANUP" xml:space="preserve">
+        <value>Status cleanup</value>
+    </data>
+    <data name="STATUS_REPORT" xml:space="preserve">
+        <value>Status report</value>
+    </data>
+    <data name="TOTAL_AMOUNT" xml:space="preserve">
+        <value>Total amount</value>
+    </data>
+    <data name="TOTAL_TAX" xml:space="preserve">
+        <value>Total Tax</value>
+    </data>
+  <data name="QuoteListTitle.Text" xml:space="preserve">
+    <value>Quotes List</value>
   </data>
 </root>
