--- a/App_GlobalResources/Resource.fr.resx
+++ b/App_GlobalResources/Resource.fr.resx
@@ -582,6 +582,9 @@
   <data name="_PropertyForm_cshtml_Set_Localization_Title" xml:space="preserve">
     <value>[FR]Set Localization</value>
   </data>
+  <data name="TEXT_BUTTON_ADD" xml:space="preserve">
+    <value>{FR}Add</value>
+  </data>
   <data name="TEXT_BUTTON_DELETE" xml:space="preserve">
     <value>[FR]Delete</value>
   </data>
