--- a/Quoting/App_LocalResources/QuoteList.aspx.it.resx
+++ b/Quoting/App_LocalResources/QuoteList.aspx.it.resx
@@ -118,63 +118,63 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="CREATE_QUOTE" xml:space="preserve">
-    <value />
-  </data>
-  <data name="CREATION_DATE" xml:space="preserve">
-    <value />
-  </data>
-  <data name="CURRENCY" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ID_QUOTE" xml:space="preserve">
-    <value />
-  </data>
-  <data name="IS_GROUPSUBSCRIPTION" xml:space="preserve">
-    <value />
-  </data>
-  <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="PageResource1.Title" xml:space="preserve">
-    <value />
-  </data>
-  <data name="QuoteListTitle.Text" xml:space="preserve">
-    <value />
-  </data>
-  <data name="QUOTE_ACCOUNTS" xml:space="preserve">
-    <value />
-  </data>
-  <data name="QUOTE_DESCRIPTION" xml:space="preserve">
-    <value />
-  </data>
-  <data name="QUOTE_FAILEDMESSAGE" xml:space="preserve">
-    <value />
-  </data>
-  <data name="QUOTE_LIST" xml:space="preserve">
-    <value />
-  </data>
-  <data name="QUOTE_PARAMETERS" xml:space="preserve">
-    <value />
-  </data>
-  <data name="QUOTE_POS" xml:space="preserve">
-    <value />
-  </data>
-  <data name="QUOTE_STATUS" xml:space="preserve">
-    <value />
-  </data>
-  <data name="REPORT_LINK" xml:space="preserve">
-    <value />
-  </data>
-  <data name="STATUS_CLEANUP" xml:space="preserve">
-    <value />
-  </data>
-  <data name="STATUS_REPORT" xml:space="preserve">
-    <value />
-  </data>
-  <data name="TOTAL_AMOUNT" xml:space="preserve">
-    <value />
-  </data>
-  <data name="TOTAL_TAX" xml:space="preserve">
-    <value />
-  </data>
+        <value>{IT}Create quote</value>
+    </data>
+    <data name="CREATION_DATE" xml:space="preserve">
+        <value>{IT}Creation date</value>
+    </data>
+    <data name="CURRENCY" xml:space="preserve">
+        <value>{IT}Currency</value>
+    </data>
+    <data name="ID_QUOTE" xml:space="preserve">
+        <value>{IT}Quote Id</value>
+    </data>
+    <data name="IS_GROUPSUBSCRIPTION" xml:space="preserve">
+        <value>{IT}Is group subscription</value>
+    </data>
+    <data name="MTTitle1Resource1.Text" xml:space="preserve">
+        <value>{IT}Quotes List</value>
+    </data>
+    <data name="PageResource1.Title" xml:space="preserve">
+        <value>{IT}MetraNet - Quotes List</value>
+    </data>
+    <data name="QUOTE_ACCOUNTS" xml:space="preserve">
+        <value>{IT}Account's IDs</value>
+    </data>
+    <data name="QUOTE_DESCRIPTION" xml:space="preserve">
+        <value>{IT}Quote description</value>
+    </data>
+    <data name="QUOTE_FAILEDMESSAGE" xml:space="preserve">
+        <value>{IT}Failed message</value>
+    </data>
+    <data name="QUOTE_LIST" xml:space="preserve">
+        <value>{IT}Quotes list</value>
+    </data>
+    <data name="QUOTE_PARAMETERS" xml:space="preserve">
+        <value>{IT}Quote parameters</value>
+    </data>
+    <data name="QUOTE_POS" xml:space="preserve">
+        <value>{IT}Product offerings's IDs</value>
+    </data>
+    <data name="QUOTE_STATUS" xml:space="preserve">
+        <value>{IT}Quote status</value>
+    </data>
+    <data name="QuoteListTitle.Text" xml:space="preserve">
+        <value>{IT}Quotes List</value>
+    </data>
+    <data name="REPORT_LINK" xml:space="preserve">
+        <value>{IT}Report link</value>
+    </data>
+    <data name="STATUS_CLEANUP" xml:space="preserve">
+        <value>{IT}Status cleanup</value>
+    </data>
+    <data name="STATUS_REPORT" xml:space="preserve">
+        <value>{IT}Status report</value>
+    </data>
+    <data name="TOTAL_AMOUNT" xml:space="preserve">
+        <value>{IT}Total amount</value>
+    </data>
+    <data name="TOTAL_TAX" xml:space="preserve">
+        <value>{IT}Total Tax</value>
+    </data>
 </root>
