--- a/Sites/MetraView/App_GlobalResources/SiteJSConsts.pt-br.resx
+++ b/Sites/MetraView/App_GlobalResources/SiteJSConsts.pt-br.resx
@@ -520,7 +520,7 @@
     <value>Propriedades</value>
   </data>
   <data name="TEXT_PRORATED_RECURRING_CHARGE_CREDIT_MESSAGE" xml:space="preserve">
-    <value>Você recebeu um crédito, pois sua assinatura com uma cobrança recorrente sendo faturada antecipadamente foi alterada durante esse período de faturamento.&lt;BR&gt;&lt;BR&gt;Em sua fatura anterior, nós cobramos [RCAmount] de você, antecipadamente.  Você usou o serviço apenas de [RCIntervalStart] a [RCIntervalEnd].  Assim, esse crédito representa a diferença de [ProratedIntervalStart] a [ProratedIntervalEnd].  Esse é um período de [ProratedDays] dias.&lt;BR&gt;&lt;BR&gt;Para calcular o crédito, nós usamos uma taxa diária de [ProratedDailyRate].  A taxa diária foi calculada dividindo [RCAmount] pelo número de dias do período.  Então, usamos o período de [ProratedDays] dias e multiplicamos por [ProratedDailyRate] resultando em um crédito de [Amount] para você.&lt;BR&gt;</value>
+    <value>Você recebeu um crédito, pois sua assinatura com uma cobrança recorrente sendo faturada antecipadamente foi alterada durante esse período de faturamento.&lt;BR&gt;&lt;BR&gt;Em sua fatura anterior, nós cobramos [RCAmount] de você, antecipadamente.  Você usou o serviço apenas de [RCIntervalStart] a [ProratedIntervalStart].  Assim, esse crédito representa a diferença de [ProratedIntervalStartNextDay] a [ProratedIntervalEnd].  Esse é um período de [ProratedDays] dias.&lt;BR&gt;&lt;BR&gt;Para calcular o crédito, nós usamos uma taxa diária de [ProratedDailyRate].  A taxa diária foi calculada dividindo [RCAmount] pelo número de dias do período.  Então, usamos o período de [ProratedDays] dias e multiplicamos por [ProratedDailyRate] resultando em um crédito de [Amount] para você.&lt;BR&gt;</value>
   </data>
   <data name="TEXT_PRORATED_RECURRING_CHARGE_MESSAGE" xml:space="preserve">
     <value>Essa cobrança foi rateada.  O rateio reduz as cobranças cobrando somente pelo número de dias que você assinou um serviço em um dado período de faturamento.&lt;BR&gt;&lt;BR&gt;Para esse item, sua cobrança começou em [ProratedIntervalStart] e terminou em [ProratedIntervalEnd].  Assim, você recebeu [ProratedDays] dias de serviço.  Sua cobrança para esse período foi calculada multiplicando a taxa diária de [ProratedDailyRate] pelos [ProratedDays] dias nos quais você estava assinando.  Isso é igual a [Amount].  (A taxa diária de [ProratedDailyRate] é calculada dividindo as cobranças do período de [RCAmount] pelo número de dias no período).&lt;BR&gt;</value>
@@ -674,26 +674,32 @@
   </data>
   <data name="TEXT_PASSWORD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{PT_BR} Passwords do not match.</value>
-  </data>  
+  </data>
   <data name="TEXT_PHONE_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{PT_BR} Enter a valid phone number. Format: 555-555-5555</value>
-  </data>    
+  </data>
   <data name="TEXT_CREDITCARD_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{PT_BR} Credit card format is invalid</value>
-  </data>      
+  </data>
   <data name="TEXT_CREDITCARD_VERIFICATIONNO_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{PT_BR} CV Number is invalid</value>
-  </data>        
+  </data>
   <data name="TEXT_SSN_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{PT_BR} SSN format: xxx-xx-xxxx</value>
-  </data>          
+  </data>
   <data name="TEXT_ACCOUNTNO_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{PT_BR} Only numeric digits are allowed</value>
-  </data>            
+  </data>
   <data name="TEXT_ZIPCODE_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{PT_BR} Zipcode is invalid</value>
-  </data>              
+  </data>
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
     <value>{PT_BR} Middle initial is invalid</value>
-  </data>    
+  </data>
+  <data name="EXTJS_DATE_FORMAT" xml:space="preserve">
+    <value>d/m/Y</value>
+  </data>
+  <data name="EXTJS_DATE_LONG_FORMAT" xml:space="preserve">
+    <value>d/m/Y H:i:s</value>
+  </data>
 </root>
